--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dev_dependencies:
 flutter:
  # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/profile.png
+    - assets/images/
 
 
   # The following line ensures that the Material Icons font is
