--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
-    id 'com.google.gms.google-services'
+    id 'com.google.gms.google-services' // Required for Firebase
 }
 
 android {
     namespace = "com.example.orderq"
-    compileSdk = flutter.compileSdkVersion
+    compileSdk = 34 // Ensure this is set to API level 33 or higher
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -17,25 +17,23 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "1.8" // Set Kotlin JVM target
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.orderq"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        minSdk = 23 // Firebase requires at least API level 21
+        targetSdk = 33 // Match the compileSdk version
+        versionCode = 1 // Update this for new releases
+        versionName = "1.0"
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            // Configure signing for release builds
             signingConfig = signingConfigs.debug
+            minifyEnabled false // Disable shrinking for now
+            shrinkResources false
         }
     }
 }
