--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.10.1
   cloud_firestore: ^5.6.1
+  firebase_auth: ^5.4.1
+  fluttertoast: ^8.2.10
 
 dev_dependencies:
   flutter_test:
