--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.10.1
+  gap: ^3.0.1
   cloud_firestore: ^5.6.1
   firebase_auth: ^5.4.1
   fluttertoast: ^8.2.10
