--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cloud_firestore: ^5.6.1
   firebase_auth: ^5.4.1
   fluttertoast: ^8.2.10
+  image_picker: ^1.1.2
+  firebase_storage: ^12.4.1
 
 dev_dependencies:
   flutter_test:
